--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Zuri-Stage-One</title>
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
@@ -37,7 +37,7 @@
 					<div class="grid">
 						<p>Github Link :</p>
 						<a
-							href=""
+							href="https://github.com/Tifeh13/zuri-2.git"
 							data-testid="githubURL"
 							>Visit Github</a
 						>
